# brain-tumor

./: Makefile  README.md  pyproject.toml  requirements.txt
brain_tumor/: __init__.py  config.py  dataset.py
brain_tumor/modeling/: __init__.py  models.py  test.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
